--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CountDowm_Timer</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
     <!-- <script src="script.js" defer></script> -->
     <script lang="javascript">
@@ -26,7 +26,7 @@
         <form name=f >
             <table cellpadding='5' cellspacing="0" border="0" align="center" >
                 <tr>
-                    <td colspan='4' ><input type="text" name="t1"></td>
+                    <td colspan='4' ><input id="clear" type="text" name="t1"></td>
                 </tr>
                 <tr>
                     <td><input class="setwidth" type="button" name="b1" value="1" onclick="calc('1');"></td>
@@ -44,20 +44,18 @@
                     <td><input class="setwidth" type="button" name="b9" value="7" onclick="calc('7');"></td>
                     <td><input class="setwidth" type="button" name="b10" value="8" onclick="calc('8');"></td>
                     <td><input class="setwidth" type="button" name="b11" value="9" onclick="calc('9');"></td>
-                    <td><input class="setwidth" type="button" name="b12" value="*" onclick="calc('*');"></td>
+                    <td rowspan="2"><input class="ht" type="button" name="b12" value="+" onclick="calc('+');"></td>
                 </tr>
                 <tr>
                     <td><input class="setwidth" type="button" name="b13" value="0" onclick="calc('0');"></td>
                     <td><input class="setwidth" type="button" name="b14" value="." onclick="calc('.');"></td>
-                    <td><input class="setwidth" type="button" name="b15" value="+" onclick="calc('+');"></td>
-                    <td><input class="setwidth" type="button" name="b16" value="=" onclick="calc('=');"></td>
+                    <td><input class="setwidth" type="button" name="b15" value="*" onclick="calc('*');"></td>
+                    <!-- <td><input class="setwidth" type="button" name="b16" value="%" onclick="calc('%');"></td> -->
                 </tr>
-                <!-- <tr>
-                    <td><input class="setwidth" type="button" name="b17" value="AC" onclick=""></td>
-                    <td><input class="setwidth" type="button" name="b18" value="%" onclick=""></td>
-                    <td><input class="setwidth" type="button" name="b19" value="+" onclick=""></td>
-                    <td><input class="setwidth" type="button" name="b20" value="=" onclick=""></td>
-                </tr> -->
+                <tr>
+                    <td colspan='2' ><input class="setwidth2" type="button" name="b17" value="AC" onclick="document.getElementById('clear').value = ''"></td>
+                    <td colspan='2' ><input class="setwidth2" type="button" name="b18" value="=" onclick="calc('=');"></td>
+                </tr> 
         </table>
     </form>
 </div>
