--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <form name=f >
             <table cellpadding='5' cellspacing="0" border="0" align="center" >
                 <tr>
-                    <td colspan='4' ><input id="clear" type="text" name="t1"></td>
+                    <td colspan="4"><input class="text" id="clear" type="text" name="t1"></td>
                 </tr>
                 <tr>
                     <td><input class="setwidth" type="button" name="b1" value="1" onclick="calc('1');"></td>
