input field updated

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <!-- <td><input class="setwidth" type="button" name="b16" value="%" onclick="calc('%');"></td> -->
                 </tr>
                 <tr>
-                    <td colspan='2' ><input class="setwidth2" type="button" name="b17" value="AC" onclick="document.getElementById('clear').value = ''"></td>
+                    <td colspan='2' ><input class="setwidth2" type="button" name="b17" value="AC" onclick="document.getElementById('clear').value = '0'"></td>
                     <td colspan='2' ><input class="setwidth2" type="button" name="b18" value="=" onclick="calc('=');"></td>
                 </tr> 
         </table>
